# colorkit

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: convert.rs  lib.rs  num_type.rs  space.rs  wp.rs
src/channels/: map.rs  mod.rs
src/color/: color_old.rs  mod.rs
src/color/alpha/: alpha.rs  mod.rs  premultiplied.rs
src/color/color_impl/: mod.rs  nightly_impl.rs  shared.rs
src/color/color_impl/shared/: mod.rs  rgb.rs  xyz.rs
src/color/color_impl/stable_impl/: inner.rs  (+2 more)
src/color/traits/: alpha.rs  array.rs  common.rs  mod.rs
src/color_old/: aliases.rs  alpha.rs  color.rs  mod_old.rs  oklab.rs  ops.rs  rgb.rs
src/color_old/color_type/: mod.rs  oklab.rs  rgb.rs  trait_impl.rs
src/color_old/format/: alpha.rs  map.rs  mod.rs  space.rs
src/colors/: alpha.rs  alpha2.rs  macros.rs  mod.rs  oklab.rs  oklch.rs  rgb.rs  xyz.rs
src/layout/: map.rs  mapped.rs  mod.rs  packed_565.rs  planar.rs
src/math/: mod.rs
src/math/arch/: arm64.rs  mod.rs  x86_64.rs
src/math/tests/: mod.rs  round.rs
src/math/universal/: atan.rs  cbrt.rs  cos_sin.rs  mod.rs  quirt.rs  rounding.rs  sqrt.rs  ulp.rs
src/ops/: inter.rs  mod.rs
src/scalar/: mod.rs  uint16.rs  uint8.rs
src/scalar/bit_uint/: cmp.rs  macros.rs  mod.rs  ops.rs  scalar.rs  uint_type.rs
src/scalar/norm_f32/: add_sub.rs  cmp.rs  div_mul.rs  macros.rs  mod.rs
src/space/: alpha.rs  array.rs  bounds.rs  layout.rs  mod.rs  slice.rs  srgb.rs  white_point.rs  wrapper.rs  xyz.rs
src/space2/: mod.rs  white_point.rs
src/space_old/: srgb.rs
src/utils/: array.rs  array_like.rs  math.rs  mod.rs  number.rs
src/utils/math/: mod.rs  quirt.rs  ulp.rs
test_math/: Cargo.toml  README.md  results.txt
test_math/.cargo/: config.toml
test_math/src/: main.rs  math_fn.rs
test_math/src/runner/: mod.rs  perf.rs  primes.rs  relative.rs  ulp.rs
test_math/src/tests/: atan.rs  cbrt.rs  cos.rs  mod.rs  quirt.rs  sin.rs  sqrt.rs
tools/: matrices.jl  matrices.txt  spectrum_xyz.jl  spectrum_xyz.py  white_points.txt
(+2 files in other folders)
