[package]
name = "colorkit"
version = "0.1.0"
edition = "2024"
crate-type = ["lib"]
authors = ["Keith Cancel <admin@keith.pro>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Keith-Cancel/colorkit"
exclude = [
    "imgs/*",
    "test_math/*",
    "tools/*",
    ".gitignore",
    ".gitattributes",
]
description = "A #[no_std] library to convert and manipulate colors with an easy to use API."

[dependencies]

[features]
default = []
type_const = []
