[package]
name = "colorkit"
version = "0.1.1"
edition = "2024"
crate-type = ["lib"]
authors = ["Keith Cancel <admin@keith.pro>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Keith-Cancel/colorkit"
repository = "https://github.com/Keith-Cancel/colorkit"
exclude = [
    "imgs/*",
    "test_math/*",
    "tools/*",
    ".gitignore",
    ".gitattributes",
]
documentation = "https://docs.rs/colorkit"
description = "A #[no_std] library to convert and manipulate colors with an easy to use API."
keywords = ["color", "rgb", "conversion", "graphics", "no-std"]
categories = ["no-std", "graphics", "multimedia", "encoding", "multimedia::images"]

[dependencies]

[features]
default = []
type_const = []
